# mads_datasets

./: .gitignore  Makefile  README.md  pyproject.toml
mads_datasets/: __init__.py  base.py  datasetfactory.py  datasets.py  datatools.py  settings.py  tokenizer.py
mads_datasets/datasets/: __init__.py  basicdatasets.py  torchdatasets.py
mads_datasets/factories/: __init__.py  basicfactories.py  torchfactories.py
tests/: test_data.py  test_tokenizer.py
