[tool.poetry]
name = "mads-datasets"
version = "0.1.5.4"
description = "Datasets for the master applied data science"
authors = ["Raoul Grouls <Raoul.Grouls@han.nl>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mads_datasets"}]

[tool.poetry.urls]
GitHub = "https://github.com/raoulg/mads_datasets"

[tool.poetry.dependencies]
python = "^3.9.16"
torch = "^2.0.1"
tqdm = "^4.65.0"
requests = "^2.31.0"
loguru = "^0.7.0"
numpy = "^1.24.3"
pydantic = "^1.10.8"
pillow = "^9.5.0"
torchtext = "^0.15.2"
pandas = { version = "^2.0.2", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pytest = "^7.3.1"
pep8-naming = "^0.13.3"
flake8-annotations = "^3.0.1"
jupyter = "^1.0.0"

[tool.poetry.group.tests.dependencies]
responses = "^0.23.1"

[tool.poetry.extras]
pandas = ["pandas"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:jupyter_client.*:",
]