[project]
name = "mads-datasets"
version = "0.3.14"
description = "Datasets for the master applied data science"
authors = [
    {name = "Raoul Grouls", email = "Raoul.Grouls@han.nl"},
]

dependencies = [
    "tqdm>=4.0.0",
    "requests>=2.0.0",
    "loguru>=0.7.2",
    "numpy>=1.24.4",
    "pydantic>=1.10.8",
    "pillow>=9.5.0",
    "pandas>=2.0.3",
    "keyring>=24.2.0",
    "polars>=1.5.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.0.277",
    "black>=23.3.0",
    "isort>=5.12.0",
    "pytest>=7.4.0",
    "jupyter>=1.0.0",
    "responses>=0.23.1",
]

[project.urls]
GitHub = "https://github.com/raoulg/mads_datasets"

[project.optional-dependencies]
torch = [
    "torch>=2.0.1",
]

[project.group.tests.dependencies]
responses = "^0.23.1"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:jupyter_client.*:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mads_datasets"]
